# rvv-lmul-bench

./: CMakeLists.txt  README.md  build.sh  build_all.sh  l2rvv.cpp  run_all.py
cmake/: OutputFlagsOption.cmake  TargetCreationFunctions.cmake  TestEnvironment.cmake
cmake/checks/: compile_rvv_0p7.cpp  compile_rvv_1p0.cpp
src/: CMakeLists.txt  defines.hpp  gauss.cpp  gauss.hpp  l2norm_rvv.cpp  l2norm_rvv.hpp  l2norm_rvv_defines.hpp  main.cpp
toolchains/: riscv64-0p7-gcc.toolchain.cmake  riscv64-1p0-gcc.toolchain.cmake
